--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Janspiry.github.io"
+title                    : "Liangwei Jiang"
 title_separator          : "-"
 name                     : &name "Liangwei Jiang"
 description              : &description "personal description"
@@ -80,10 +80,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "LiangWei Jiang"
+  name             : "Liangwei Jiang"
   avatar           : "profile.jpg"
-  bio              : "Slower Is Better"
-  location         : "Sichuan China"
+  bio              : "Master, BeiHang University"
+  location         : "Beijing China"
   employer         :
   pubmed           : 
   googlescholar    : 
