--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,7 +6,7 @@ main:
   # - title: "Talks"
   #   url: /talks/    
 
-  # - title: "Teaching"
+  # - title: ""
   #   url: /teaching/    
     
   # - title: "Portfolio"
@@ -15,8 +15,9 @@ main:
   # - title: "Blog Posts"
   #   url: /year-archive/
     
-  # - title: "CV"
-  #   url: /cv/
-    
+  - title: "CV"
+    url: /cv/
+  - title: "Grants&Awards"
+    url: /awards/ 
   # - title: "Guide"
   #   url: /markdown/
