--- a/_config.yml
+++ b/_config.yml
@@ -24,10 +24,10 @@ author:
   name             : "Liangwei Jiang"
   avatar           : "images/profile.jpg"
   bio              : "life is struggle"
-  location         : "Beijing, China"
+  location         : "Hangzhou, China"
   employer         :
   pubmed           : 
-  googlescholar    : # "https://scholar.google.com/citations?user=YOUR_GOOGLE_SCHOLAR_ID"
+  googlescholar    : "https://scholar.google.com/citations?hl=zh-CN&user=aoRsuzQAAAAJ"
   email            : "lw_jiang@foxmail.com"
   researchgate     : # e.g., "https://www.researchgate.net/profile/yourprofile"
   uri              :
